add images, video and the necessary styles

--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="resources/css/styles.css">
   <title>Document</title>
 </head>
 <body>
-  <h1>Discover hidden places in the world around you</h1>
+  <h1 class="title">Discover hidden places in the world around you</h1>
+  <a class="download" href="#">Download Excursion (Coming soon!)</a>
+  <video class="video" autoplay="" loop="" muted="">
+    <source src="resources/videos/excursion.qt" type="video/mp4">
+    Your web browser doesn't support the video tag! Update your web browser if possible.
+  </video>
+  <h2 class="subtitle">Your personal travel guide</h2>
+  <p class="text" >Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <img src="resources/images/camp.jpg" alt="">
+  <img class="smartphone-icon" src="resources/images/phone.png" alt="">
+  <h2 class="subtitle">Coming Soon for iPhone and Android</h2>
+  <a class="download" href="#">Download Excursion (Coming soon!)</a>
+  <footer class="footer">
+    <p class="text footer-text">&copy;Excursion</p>
+  </footer>
 </body>
 </html>
